// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render expensesSummary with 1 expense 1`] = `
<div>
  <h4>
    Viewing 1 expense totalling $1.23
  </h4>
</div>
`;

exports[`should correctly render expensesSummary with multiple expenses 1`] = `
<div>
  <h4>
    Viewing 23 expenses totalling $2,455.63
  </h4>
</div>
`;
